# Just-another-easy-game

./: CMakeLists.txt  CREDITS.txt  README.md  Terrain.cpp  animation.cpp  animation.h  game.cpp  game.h  main.cpp  objects.cpp  objects.h  player.cpp  player.h  terrain.h  tilemap.cpp  tilemap.h
assets/: TileMap1.json  untitled.json
libs/: animation.h  game.h  leaderboard.h  objects.h  player.h  terrain.h  tilemap.h
src/: animation.cpp  game.cpp  leaderboard.cpp  main.cpp  objects.cpp  player.cpp  terrain.cpp  tilemap.cpp
